[mod] add wp-rate

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -47,6 +47,7 @@
 @use "./switch.scss";
 @use "./tabs.scss";
 @use "./carousel.scss";
+@use "./rate.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
