--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -48,6 +48,8 @@
 @use "./tabs.scss";
 @use "./carousel.scss";
 @use "./rate.scss";
+@use "./time-panel.scss";
+@use "./time-picker.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
