--- a/packages/theme-chalk/src/date-picker.scss
+++ b/packages/theme-chalk/src/date-picker.scss
@@ -103,6 +103,15 @@
             padding: 5px 0 !important;
         }
     }
+    .wp-time-picker{
+        &.timeError{
+            border-color: #ff0000;
+        }
+    }
+    .timeErrorText{
+        color: #ff0000;
+        font-size: 12px;
+    }
 }
 .wp-date-picker-panel-popover-monthrange,.wp-date-picker-panel-popover-yearrange{
     .wp-calendar-content-day-available{
