[mod] add WpWatermark

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -50,6 +50,7 @@
 @use "./rate.scss";
 @use "./time-panel.scss";
 @use "./time-picker.scss";
+@use "./watermark.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
