--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -51,6 +51,7 @@
 @use "./time-panel.scss";
 @use "./time-picker.scss";
 @use "./watermark.scss";
+@use "./back-top.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
