--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -52,6 +52,7 @@
 @use "./time-picker.scss";
 @use "./watermark.scss";
 @use "./back-top.scss";
+@use "./maps.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
