--- a/packages/theme-chalk/src/toast.scss
+++ b/packages/theme-chalk/src/toast.scss
@@ -10,6 +10,9 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    &__absolute {
+        position: absolute;
+    }
     &__bottom {
         bottom: 10%;
     }
