[mod] add autocompete

--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -134,3 +134,27 @@
         --wp-input-line-height: 38px;
     }
 }
+
+.wp-autocompete {
+    font-size: 14px;
+    .wp-popover-content {
+        padding: 5px 0;
+        max-height: 200px;
+        overflow: auto;
+    }
+    &-cell {
+        padding: 5px 10px;
+        cursor: default;
+        &:hover {
+            background-color: #fcfcfc;
+        }
+        &--active {
+            background-color: #f5f5f5 !important;
+        }
+    }
+    &-empty {
+        text-align: center;
+        padding: 20px;
+        color: #ccc;
+    }
+}
