--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -53,6 +53,7 @@
 @use "./watermark.scss";
 @use "./back-top.scss";
 @use "./maps.scss";
+@use "./timeline.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
