--- a/packages/theme-chalk/src/maps.scss
+++ b/packages/theme-chalk/src/maps.scss
@@ -45,4 +45,13 @@
             }
         }
     }
+    &-panel{
+        position: absolute;
+        right: 15px;
+        top: 15px;
+        background-color: #ffffff;
+        &-box{
+            padding: 15px;
+        }
+    }
 }
