--- a/packages/theme-chalk/src/timeline.scss
+++ b/packages/theme-chalk/src/timeline.scss
@@ -103,7 +103,7 @@
     }
 }
 
-.wp-timeline-horizontal {
+.wp-timeline--horizontal {
     display: flex;
     justify-content: space-between;
     position: relative;
