--- a/icons/style.scss
+++ b/icons/style.scss
@@ -41,4 +41,50 @@
         }
 
     }
+    .notSearchResult{
+        color: #999999;
+        text-align: center;
+        font-size: 14px;
+        margin-top: 30px;
+        width: 100%;
+    }
+    .icons-container{
+        min-height: 300px;
+        display: flex;
+        padding: 15px;
+        flex-wrap: wrap;
+        gap: 5px;
+        &-item{
+            width: calc((100% - (5px * 9)) / 10);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 80px;
+            border:1px dashed transparent;
+            border-radius: 6px;
+            cursor: pointer;
+            &-icon{
+                .icon{
+                    width: 25px !important;
+                    height: 25px !important;
+                }
+            }
+            &-action{
+                font-size: 12px;
+                color: #999999;
+                margin-top: 15px;
+            }
+            &:hover{
+                border:1px dashed #d8d8d8;
+                background-color: #efefef;
+                .icons-container-item-action{
+                    color: #4b98fc;
+                }
+            }
+            &-active{
+                border:1px solid #ff0000;
+            }
+        }
+    }
 }
