--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -54,6 +54,7 @@
 @use "./back-top.scss";
 @use "./maps.scss";
 @use "./timeline.scss";
+@use "./result.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
