[mod] add backTop & backTopAfterQuery

--- a/packages/theme-chalk/src/pro/pro-page-layout.scss
+++ b/packages/theme-chalk/src/pro/pro-page-layout.scss
@@ -23,4 +23,8 @@
     &-pagination {
         margin-top: 15px;
     }
+    .wp-back-top {
+        background-color: #fff;
+        color: var(--wp-color-primary);
+    }
 }
