--- a/icons/style.scss
+++ b/icons/style.scss
@@ -49,7 +49,6 @@
         width: 100%;
     }
     .icons-container{
-        min-height: 300px;
         display: flex;
         padding: 15px;
         flex-wrap: wrap;
@@ -64,6 +63,8 @@
             border:1px dashed transparent;
             border-radius: 6px;
             cursor: pointer;
+            user-select: none;
+            padding-top: 15px;
             &-icon{
                 .icon{
                     width: 25px !important;
@@ -74,16 +75,47 @@
                 font-size: 12px;
                 color: #999999;
                 margin-top: 15px;
+                opacity: 0;
             }
             &:hover{
                 border:1px dashed #d8d8d8;
                 background-color: #efefef;
                 .icons-container-item-action{
                     color: #4b98fc;
+                    opacity: 1;
                 }
             }
             &-active{
-                border:1px solid #ff0000;
+                border:1px solid #4d9ccd;
+                background-color: #e9f6ff;
+                .icons-container-item-action{
+                    color: #4d9ccd;
+                    opacity: 1;
+                }
+            }
+            &-icon-name{
+                font-size: 12px;
+                color: #999999;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                overflow: hidden;
+                &>*{
+                    padding: 0 15px;
+
+                }
+            }
+            &-operate{
+                span{
+                    font-size: 12px;
+                    color: #ff724b;
+                    &:hover{
+                        color: #ff0000;
+                    }
+                    &+span{
+                        margin-left: 5px;
+                    }
+                }
             }
         }
     }
