--- a/packages/theme-chalk/src/result.scss
+++ b/packages/theme-chalk/src/result.scss
@@ -7,6 +7,7 @@
         font-size: 200px;
         line-height: 1;
         display: flex;
+        color: var(--wp-color-primary);
     }
     &-message {
         font-size: 30px;
